--- a/assignment/JavaFXApplication2/src/javafxapplication2/FXMLDocument.fxml
+++ b/assignment/JavaFXApplication2/src/javafxapplication2/FXMLDocument.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="1023.0" prefWidth="1093.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="javafxapplication2.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="1023.0" prefWidth="1093.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxapplication2.FXMLDocumentController">
     <children>
         <Button fx:id="yes_button" layoutX="864.0" layoutY="324.0" onAction="#yesMethod" prefHeight="81.0" prefWidth="181.0" text="Yes" />
         <Label fx:id="ip_label" alignment="CENTER_RIGHT" layoutX="14.0" layoutY="14.0" minHeight="16" minWidth="69" prefHeight="59.0" prefWidth="142.0" text="IP:">
@@ -21,7 +22,7 @@
       </Label>
       <TextField fx:id="ip_text" layoutX="169.0" layoutY="14.0" prefHeight="59.0" prefWidth="647.0" text="127.0.0.1" />
       <TextField fx:id="port_text" layoutX="169.0" layoutY="84.0" prefHeight="59.0" prefWidth="647.0" text="2333" />
-      <TextArea fx:id="show_area" layoutX="69.0" layoutY="154.0" prefHeight="762.0" prefWidth="751.0" />
+      <TextArea fx:id="show_area" layoutX="65.0" layoutY="161.0" prefHeight="762.0" prefWidth="751.0" />
       <Button fx:id="no_button" layoutX="864.0" layoutY="471.0" onAction="#noMethod" prefHeight="81.0" prefWidth="181.0" text="No" />
       <Button fx:id="connect_button" layoutX="864.0" layoutY="44.0" onAction="#connectMethod" prefHeight="81.0" prefWidth="181.0" text="Connect" />
     </children>
